* Added a tool for significant storage savings that cleans database entries from robot hits under Affiliates > Settings > General > Robots.
* WordPress 5.1 compatibility checked.
* Using log instead of admin message to alert about potential issues during updates.
* Fixed referral amount decimals used for display of amounts in totals section and generated files.

= 3.1.0 =
* WordPress 5.0 compatibility checked.
* Setting COOKIEPATH and SITECOOKIEPATH when needed to solve issues with subfolder installs.
* Fixed some internal documentation and added missing type info.

= 3.0.1 =
* WordPress 4.9.4 compatibility checked.
* Minimum PHP version required is now 5.6.0.

= 3.0.0 =
* This is a major new release of the plugin, please make sure to back up your site and database
  before your upgrade and make sure to review the changelog to be aware of the implications of
  upgrading to this version.
* Enhances the data model to allow for fine-grained referrals.
* Fixed PHP Notice due to undefined variable $charset_collate.
* Fixed use of deprecated properties with WC 3.x
* Added formatting options to the affiliate selectize renderer.
* Updated the review notice appearance.
* Fixed several PHP notices produces due to wrong number of parameters passed to prepare() on the Affiliates Overview admin screen.
* Wordpress 4.9 compatible.
* Removed deprecated and unmaintained entries from the Integrations section in the Settings.
* Added new entries to the Integrations section for Events Manager, Formidable Forms, Ninja Forms.
* Updated the Add-Ons section with Affiliates Import and other free add-ons.
* Fixed the WooCommerce customer registration integration option is independent from the the user registration integration option.

= 2.18.3 =
* WordPress 4.9 compatibility tested.

= 2.18.2 =
* WordPress 4.8 compatibility tested.

= 2.18.1 =
* Added some adjustments for compatibility with WooCommerce 3.0.0.

= 2.18.0 =
* Enhanced the precision with which referral values are stored.